docs/wemake-python-styleguide/0.4.0/violations/best_practices/WPS412.md
---
code: WPS412
internalName: InitModuleHasLogicViolation
relatedConfigurationParameter:
- python://wemake_python_styleguide.options.defaults.I_CONTROL_CODE
title: Found __init__.py module with logic
---

Forbids to have logic inside `__init__` module.

## Reasoning
If you have logic inside the `__init__` module it means several
things:

1.  you are keeping some outdated stuff there, you need to refactor
2.  you are placing this logic into the wrong file, just create
another one
3.  you are doing some dark magic, and you should not do that

## Solution
Put your code in other modules.

However, we allow to have some contents inside the `__init__` module:

1.  comments, since they are dropped before AST comes in play
2.  docs string, because sometimes it is required to state something

It is also fine when you have different users that use your code. And
you do not want to break everything for them. In this case this rule can
be configured.

## Configuration
This rule is configurable with `--i-control-code`. Default:
{{ wps.config('python://wemake_python_styleguide.options.defaults.I_CONTROL_CODE') }}

<div class="versionadded">

0.1.0

</div>

  - Note:  
    Returns Z412 as error code